* Added the parameter targetKingdom to the spells_ops web service resource. Specifying the kd loc will let the bot create the specified target if it doesn't exist * Command related improvements: CommandBuilder replaces CommandFactory (see the script examples, because CommandFactory will be removed in a later version). Also, it's ok to use capturing groups in parsers now, as long as they aren't named the same as the parameters * Fixed file updates for scripts, so they should update automatically now (i.e. no need for rebooting after changing them) * Some spring (fall?) cleaning that shouldn't should have any effects on actual functionality